Update License as Beerware

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rust-sadari-cli"
 version = "0.1.0"
 authors = ["GeunYeong Cheon <24crazyoung@gmail.com>"]
 edition = "2018"
+lisense = "Beerware"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
